tests/baselines/reference/moduleWithNoValuesAsType.errors.txt
moduleWithNoValuesAsType.ts(2,8): error TS2709: Cannot use namespace 'A' as a type.
moduleWithNoValuesAsType.ts(7,8): error TS2709: Cannot use namespace 'B' as a type.
moduleWithNoValuesAsType.ts(15,8): error TS2709: Cannot use namespace 'C' as a type.


==== moduleWithNoValuesAsType.ts (3 errors) ====
    namespace A { }
    var a: A; // error
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.
    
    namespace B {
        interface I {}
    }
    var b: B; // error
           ~
!!! error TS2709: Cannot use namespace 'B' as a type.
    
    namespace C {
        namespace M {
            interface I {}
        }
    }
    
    var c: C; // error
           ~
!!! error TS2709: Cannot use namespace 'C' as a type.